Fix project card overflow

--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -3,7 +3,7 @@
         background: rgba(255, 255, 255, 0.192);
         color: white;
         border-radius: .2rem;
-        min-height: 120vh;
+        height: 120vh;
         width: 95vw;
         padding-top: 2rem;
         margin-top: 10rem;
